# SudokuSolver

./: CMakeLists.txt  README.md  conanfile.txt
src/: Cell.cpp  Cell.hpp  CellsGroup.hpp  Constants.hpp  FoundCells.hpp  FoundCellsEnqueuer.cpp  FoundCellsEnqueuer.hpp  FoundPositions.hpp  Grid.cpp  Grid.hpp  GridLoader.cpp  GridLoader.hpp  GridPossibilitiesUpdater.cpp  GridPossibilitiesUpdater.hpp  GridSolver.cpp  GridSolver.hpp  GridSolverFactory.cpp  GridSolverFactory.hpp  GridSolverWithHypothesis.cpp  GridSolverWithHypothesis.hpp  GridSolverWithoutHypothesis.cpp  GridSolverWithoutHypothesis.hpp  GridStatus.cpp  GridStatus.hpp  GridStatusGetter.cpp  GridStatusGetter.hpp  LockedPossibilites.cpp  LockedPossibilites.hpp  ParallelPossibilitiesRemover.cpp  ParallelPossibilitiesRemover.hpp  ParallelUniquePossibilitySetter.cpp  ParallelUniquePossibilitySetter.hpp  Position.hpp  Possibilities.cpp  Possibilities.hpp  PossibilitiesRemover.cpp  PossibilitiesRemover.hpp  PossibleValues.hpp  RelatedCellsGetter.cpp  RelatedCellsGetter.hpp  (+13 more)
test/: main_test.cpp
test/functionalTest/: FTestGridSolver.cpp
test/mock/: MockFoundCellsEnqueuer.hpp  MockGridPossibilitiesUpdater.hpp  MockGridSolver.hpp  MockGridSolverWithHypothesis.hpp  MockGridSolverWithoutHypothesis.hpp  MockGridStatus.hpp  MockGridStatusGetter.hpp  MockParallelPossibilitiesRemover.hpp  MockParallelUniquePossibilitySetter.hpp  MockPossibilitiesRemover.hpp  MockRelatedCellsGetter.hpp  MockRelatedPositionsGetter.hpp  MockRelatedPossibilitiesRemover.hpp  MockUniquePossibilityFinder.hpp  MockUniquePossibilitySetter.hpp
test/unitTest/: TestCell.cpp  TestFoundPositions.cpp  TestGridPossibilitiesUpdater.cpp  TestGridSolverWithHypothesis.cpp  TestGridSolverWithoutHypothesis.cpp  TestGridStatusGetter.cpp  TestParallelPossibilitiesRemover.cpp  TestParallelUniquePossibilitySetter.cpp  TestPossibilities.cpp  TestPossibilitiesRemover.cpp  TestRelatedPositionsGetter.cpp  TestRelatedPossibilitiesRemover.cpp  TestThreadSafePossibilities.cpp  TestUniquePossibilityFinder.cpp  TestUniquePossibilitySetter.cpp
test/unittest/: TestCell.cpp  TestFoundCells.cpp  TestFoundCellsEnqueuer.cpp  TestGridLoader.cpp  TestGridSolver.cpp  TestGridStatus.cpp  TestPossibilitiesRemover.cpp  TestRelatedCellsGetter.cpp  TestUniquePossibilityFinder.cpp  TestUniquePossibilitySetter.cpp
test/utils/: Utils.hpp
